--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@faker-js/faker": "^9.8.0",
     "@prisma/client": "^6.9.0",
     "antd": "^5.26.1",
+    "antd-style": "^3.7.1",
     "dayjs": "^1.11.13",
     "next": "15.3.3",
     "react": "^19.0.0",
