--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
     "@prisma/client": "^6.9.0",
+    "@react-pdf/renderer": "^4.3.0",
     "antd": "^5.26.1",
     "antd-style": "^3.7.1",
     "dayjs": "^1.11.13",
