--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-pdf/renderer": "^4.3.0",
     "antd": "^5.26.1",
     "antd-style": "^3.7.1",
+    "bcrypt": "^6.0.0",
     "dayjs": "^1.11.13",
+    "jose": "^6.0.11",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
